# Torjoman-telegram

./: .gitignore  README.md  main.py  pyproject.toml  torjoman-telegram.session
db/: __init__.py  models.py
plugins/: login.py  register.py  start.py
plugins/settings/: change_password.py  main.py
plugins/settings/change_preferences/: change_number_of_words.py  change_sending_time.py  first_name.py  last_name.py  main.py
utils/: filters.py  sync.py  texts.py
